# routes/contacts.js
@@ -3,14 +3,14 @@ const router = express.Router();
 
 const contactsController = require('../controllers/contacts');
 
-router.get('/contacts', contactsController.getAll);
+router.get('/', contactsController.getAll);
 
-router.get('/contacts/:id', contactsController.getSingle);
+router.get('/:id', contactsController.getSingle);
 
-router.post('/contacts', contactsController.createContact);
+router.post('/', contactsController.createContact);
 
-router.put('/contacts/:id', contactsController.updateContact);
+router.put('/:id', contactsController.updateContact);
 
-router.delete('/contacts/:id', contactsController.deleteContact);
+router.delete('/:id', contactsController.deleteContact);
 
 module.exports = router;
